[package]
name = "filmDatabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
csv = "1.2.1"
druid = {version= "0.8.3", features=["image"]}
reqwest = {version= "0.11.17", features=["blocking"]}
serde = {version="1.0", features= ["derive"]}
serde_json = "1.0"
